Update to SPDX Spec 3.0.1
Also includes several maint. improvements suggested by IntelliJ IDE