@@ -1,14 +1,14 @@
 /**
  * Copyright (c) 2020 Source Auditor Inc.
- *
+ * <p>
  * SPDX-License-Identifier: Apache-2.0
- * 
+ * <p>
  *   Licensed under the Apache License, Version 2.0 (the "License");
  *   you may not use this file except in compliance with the License.
  *   You may obtain a copy of the License at
- *
+ * <p>
  *       http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
  *   Unless required by applicable law or agreed to in writing, software
  *   distributed under the License is distributed on an "AS IS" BASIS,
  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,15 +18,10 @@
 package org.spdx.spdxRdfStore;
 
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -83,22 +78,23 @@ import org.spdx.storage.IModelStore.IModelStoreLock;
 
 /**
  * Manages the reads/write/updates for a specific Jena model associated with a document
- * 
- * Since the ID's are not fully qualified with the URI, there is some complexity in this implementation.
- * 
- * It is assumed that all ID's are subjects that are either Anonymous or URI types.
+ * <p>
+ * Since the IDs are not fully qualified with the URI, there is some complexity in this implementation.
+ * <p>
+ * It is assumed that all IDs are subjects that are either Anonymous or URI types.
  * If a URI type, the ID namespace is either the listed license namespace or the document URI.
  * 
  * @author Gary O'Neall
  *
  */
+@SuppressWarnings("LoggingSimilarMessage")
 public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	static final Logger logger = LoggerFactory.getLogger(RdfSpdxModelManager.class.getName());
 	
 	static final String RDF_TYPE = SpdxConstantsCompatV2.RDF_NAMESPACE + SpdxConstantsCompatV2.RDF_PROP_TYPE.getName();
 	
-	static final Set<String> LISTED_LICENSE_CLASSES = Collections.unmodifiableSet(new HashSet<String>(Arrays.asList(SpdxConstantsCompatV2.LISTED_LICENSE_URI_CLASSES)));
+	static final Set<String> LISTED_LICENSE_CLASSES = Set.of(SpdxConstantsCompatV2.LISTED_LICENSE_URI_CLASSES);
 
     private static final String HTTPS_LISTED_LICENSE_NAMESPACE_PREFIX = SpdxConstantsCompatV2.LISTED_LICENSE_NAMESPACE_PREFIX.replaceAll("http:", "https:");
     
@@ -110,7 +106,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	public class RdfListIterator implements Iterator<Object> {
 		
 		NodeIterator listIterator;
-		private Property property;
+		private final Property property;
 
 		public RdfListIterator(Resource idResource, Property property) {
 			Objects.requireNonNull(idResource, "ID resource can not be null");
@@ -132,11 +128,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 			}
 			try {
 				Optional<Object> value = valueNodeToObject(node, property);
-				if (value.isPresent()) {
-					return value.get();
-				} else {
-					return null;
-				}
+                return value.orElse(null);
 			} catch (InvalidSPDXAnalysisException e) {
 				throw new RuntimeException(e);
 			}
@@ -175,15 +167,15 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 	
 	
-	private ReadWriteLock counterLock = new ReentrantReadWriteLock();
-	private NextIdListener nextIdListener = new NextIdListener();
+	private final ReadWriteLock counterLock = new ReentrantReadWriteLock();
+	private final NextIdListener nextIdListener = new NextIdListener();
 	
-	private String documentUri;
+	private final String documentUri;
 	protected Model model;
 	/**
-	 * Map of a lower case ID to the case sensitive ID
+	 * Map of a lower case ID to the case-sensitive ID
 	 */
-	private Map<String, String> idCaseSensitiveMap = new HashMap<String, String>();
+	private final Map<String, String> idCaseSensitiveMap = new HashMap<>();
 
 	private int nextNextSpdxId = 1;
 
@@ -191,9 +183,9 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 
 	private int nextNextLicenseId = 1;
 
-	private Property typeProperty;
+	private final Property typeProperty;
 
-	private String documentNamespace;
+	private final String documentNamespace;
 	
 	private String specVersion;
 
@@ -254,7 +246,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 
 	/**
 	 * Compare the next ID to the ID in the matcher.  Update if the matcher ID is greater than the current ID
-	 * @param documentRefMatcher
+	 * @param documentRefMatcher matcher for matching document references
 	 */
 	private synchronized void checkUpdateNextDocumentId(Matcher documentRefMatcher) {
 		counterLock.writeLock().lock();
@@ -283,7 +275,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 
 	/**
 	 * Compare the next ID to the ID in the matcher.  Update if the matcher ID is greater than the current ID
-	 * @param licenseRefMatcher
+	 * @param licenseRefMatcher  matcher for matching license references
 	 */
 	private synchronized void checkUpdateLicenseId(Matcher licenseRefMatcher) {
 		counterLock.writeLock().lock();
@@ -312,8 +304,8 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	/**
 	 * Checks to see if all instances of an ID has been removed and removes the entry
-	 * from the case insensitive map if there are no more instances
-	 * @param node
+	 * from the case-insensitive map if there are no more instances
+	 * @param node RDF node
 	 */
 	private synchronized void checkRemoveId(RDFNode node) {
 		Objects.requireNonNull(node);
@@ -328,8 +320,8 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	
 	/**
-	 * Checks for a new ID updating the next ID and map of case insensitive to case sensitive ID's
-	 * @param node
+	 * Checks for a new ID updating the next ID and map of case-insensitive to case-sensitive ID's
+	 * @param node RDF node
 	 */
 	private void checkAddNewId(RDFNode node) {
 		Objects.requireNonNull(node);
@@ -345,7 +337,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 					id.startsWith(SpdxConstantsCompatV2.SPDX_ELEMENT_REF_PRENUM)) {
 				String previous = idCaseSensitiveMap.put(id.toLowerCase(), id);
 				if (Objects.nonNull(previous)) {
-					logger.warn("Possibly ambiguous ID being introduced.  "+previous+" is being replaced by "+id);
+                    logger.warn("Possibly ambiguous ID being introduced.  {} is being replaced by {}", previous, id);
 				}
 			}
 			Matcher licenseRefMatcher = RdfStore.LICENSE_ID_PATTERN_GENERATED.matcher(id);
@@ -361,13 +353,12 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 			Matcher spdxIdMatcher = RdfStore.SPDX_ID_PATTERN_GENERATED.matcher(id);
 			if (spdxIdMatcher.matches()) {
 				checkUpdateNextSpdxId(spdxIdMatcher);
-				return;
 			}
 		}
 	}
 
 	/**
-	 * Read all ID's within this model and update all of the counters to be greater than the highest counter values found
+	 * Read all ID's within this model and update all the counters to be greater than the highest counter values found
 	 */
 	private void updateCounters() {
 		model.enterCriticalSection(true);
@@ -418,14 +409,14 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	/**
 	 * idToResource without type checking
-	 * @param id
+	 * @param id SPDX ID
 	 * @return Resource based on the ID
-	 * @throws SpdxInvalidIdException
+	 * @throws SpdxInvalidIdException On SPDX parsing errors
 	*/
 	private Resource idToResource(String id) throws SpdxInvalidIdException {
 		Objects.requireNonNull(id, "Missing required ID");
 		Resource resource;
-		Optional<String> existingType = Optional.empty();
+		Optional<String> existingType;
 		if (isAnonId(id)) {
 			resource = model.createResource(idToAnonId(id));
 		} else {
@@ -435,12 +426,12 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 				// Confirm that there is a type
 				Statement statement = model.getProperty(resource, typeProperty);
 				if (statement == null || !statement.getObject().isResource()) {
-					logger.error("ID "+id+" does not have a type.");
+                    logger.error("ID {} does not have a type.", id);
 					throw new SpdxInvalidIdException("ID "+id+" does not have a type.");
 				}
 				existingType = SpdxResourceFactory.resourceToSpdxType(statement.getObject().asResource());
-				if (!existingType.isPresent()) {
-					logger.error("ID "+id+" does not have a type.");
+				if (existingType.isEmpty()) {
+                    logger.error("ID {} does not have a type.", id);
 					throw new SpdxInvalidIdException("ID "+id+" does not have a type.");
 				}
 			} else {
@@ -448,7 +439,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 				resource = model.createResource(SpdxConstantsCompatV2.LISTED_LICENSE_NAMESPACE_PREFIX + id);
 				if (!model.containsResource(resource)) {
 				    // Check to see if it is defined with "https" instead of "http" - technically incorrect
-				    // but we'll allow it for compatibility
+				    // but, we'll allow it for compatibility
 				    resource = model.createResource(HTTPS_LISTED_LICENSE_NAMESPACE_PREFIX + id);
 				}
 				if (!model.containsResource(resource)) {
@@ -458,11 +449,11 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 						// Try listed reference types
 						try {
 							if (!ListedReferenceTypes.getListedReferenceTypes().isListedReferenceType(new URI(SpdxConstantsCompatV2.SPDX_LISTED_REFERENCE_TYPES_PREFIX + id))) {
-								logger.error("ID "+id+" does not exist in the model.");
+                                logger.error("ID {} does not exist in the model.", id);
 								throw new SpdxInvalidIdException("ID "+id+" does not exist in the model.");
 							}
 						} catch (URISyntaxException e) {
-							logger.error("ID "+id+" does not exist in the model.");
+                            logger.error("ID {} does not exist in the model.", id);
 							throw new SpdxInvalidIdException("ID "+id+" does not exist in the model.");
 						}
 					}
@@ -474,30 +465,23 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	/**
 	 * Convert an ID to a URI reference within the SPDX document
-	 * @param documentUri
-	 * @param id
+	 * @param id SPDX ID
 	 * @return URI for the ID within the document
 	 */
 	private String idToUriInDocument(String id) {
-		try {
-			return documentUri + "#" + URLEncoder.encode(id, StandardCharsets.UTF_8.name());
-		} catch (UnsupportedEncodingException e) {
-			// This should never happen
-			logger.warn("Unexpected encoding error for id "+id);
-			return documentUri + "#" + id;
-		}
-	}
+        return documentUri + "#" + URLEncoder.encode(id, StandardCharsets.UTF_8);
+    }
 	
 	/**
 	 * Convert an ID string for an Anonymous type into an AnonId
-	 * @param id
-	 * @return
-	 * @throws SpdxInvalidIdException 
+	 * @param id SPDX ID
+	 * @return an AnonId
+	 * @throws SpdxInvalidIdException On SPDX parsing errors
 	 */
 	private AnonId idToAnonId(String id) throws SpdxInvalidIdException {
 		Matcher matcher = RdfStore.ANON_ID_PATTERN.matcher(id);
 		if (!matcher.matches()) {
-			logger.error(id + " is not a valid Anonymous ID");
+            logger.error("{} is not a valid Anonymous ID", id);
 			throw new SpdxInvalidIdException(id + " is not a valid Anonymous ID");
 		}
 		String anon = matcher.group(1);
@@ -505,7 +489,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 	
 	/**
-	 * @param id
+	 * @param id SPDX ID
 	 * @return true if the ID is an anonymous ID
 	 */
 	private boolean isAnonId(String id) {
@@ -517,8 +501,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	 * @param objectUri uri or anon type string
 	 * @param type SPDX Type
 	 * @return the resource
-	 * @throws SpdxInvalidIdException
-	 * @throws DuplicateSpdxIdException 
+	 * @throws SpdxInvalidIdException on invalid SPDX id
 	 */
 	protected Resource getOrCreate(String objectUri, String type) throws SpdxInvalidIdException {
 		Objects.requireNonNull(objectUri, "Missing required object URI");
@@ -546,13 +529,13 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param id
+	 * @param id SPDX ID
 	 * @return all property names associated with the ID
-	 * @throws SpdxInvalidIdException
+	 * @throws SpdxInvalidIdException On SPDX parsing errors
 	 */
 	public List<String> getPropertyValueNames(String id) throws SpdxInvalidIdException {
 		Objects.requireNonNull(id, "Missing required ID");
-		Set<String> retval = new HashSet<String>();	// store unique values
+		Set<String> retval = new HashSet<>();	// store unique values
 		model.enterCriticalSection(true);
 		try {
 			Resource idResource = idToResource(id);
@@ -563,10 +546,10 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 						retval.add(resourceToPropertyName(action.getPredicate()));
 					}
 				} catch (SpdxRdfException e) {
-					logger.warn("Skipping invalid property "+action.getObject().toString(),e);
+                    logger.warn("Skipping invalid property {}", action.getObject().toString(), e);
 				}
 			});
-			return Collections.unmodifiableList(new ArrayList<>(retval));
+			return List.copyOf(retval);
 		} finally {
 			model.leaveCriticalSection();
 		}
@@ -574,9 +557,9 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	/**
 	 * Convert an RDFNode to a property name
-	 * @param node
-	 * @return
-	 * @throws SpdxRdfException 
+	 * @param node RDF node for a resource
+	 * @return a property name
+	 * @throws SpdxRdfException On SPDX parsing errors
 	 */
 	protected static String resourceToPropertyName(RDFNode node) throws SpdxRdfException {
 		Objects.requireNonNull(node, "Missing required node");
@@ -585,7 +568,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 			throw new SpdxRdfException("Can not convert an anonymous node into a property name.");
 		}
 		if (node.isLiteral()) {
-			logger.error("Attempting to convert an literal node to a property name: "+node.toString());
+            logger.error("Attempting to convert an literal node to a property name: {}", node);
 			throw new SpdxRdfException("Can not convert a literal node into a property name.");
 		}
 		String localName = node.asResource().getLocalName();
@@ -598,10 +581,10 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 
 	/**
 	 * Sets a property for an ID to a value
-	 * @param id
-	 * @param propertyName
-	 * @param value
-	 * @throws InvalidSPDXAnalysisException
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @param value value to set
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public void setValue(String id, String propertyName, Object value) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -625,13 +608,13 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	
 	/**
 	 * Sets the default namespace prefix for the model
-	 * @param uri
-	 * @throws SpdxRdfException 
+	 * @param oUri URI for the default namespace
+	 * @throws SpdxRdfException on RDF errors
 	 */
 	private void setDefaultNsPrefix(Object oUri) throws SpdxRdfException {
 		Objects.requireNonNull(oUri, "Can not set NS prefix to null");
 		if (oUri instanceof URI) {
-			model.setNsPrefix("", ((URI)oUri).toString());
+			model.setNsPrefix("", oUri.toString());
 		} else if (oUri instanceof String) {
 			try {
 				URI uri = new URI((String)oUri);
@@ -641,16 +624,16 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 				throw new SpdxRdfException("Invalid URI provided for model default namespace.", ex);
 			}
 		} else {
-			logger.error("Invalid type for URI provided for model default namespace: "+oUri.getClass().toString());
-			throw new SpdxRdfException("Invalid type for URI provided for model default namespace: "+oUri.getClass().toString());			
+            logger.error("Invalid type for URI provided for model default namespace: {}", oUri.getClass());
+			throw new SpdxRdfException("Invalid type for URI provided for model default namespace: "+ oUri.getClass());
 		}
 	}
 
 	/**
-	 * Converts a to an RDFNode based on the object type
-	 * @param value
-	 * @return
-	 * @throws InvalidSPDXAnalysisException
+	 * Converts to an RDFNode based on the object type
+	 * @param value value to set
+	 * @return an RDFNode based on the object type
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	private RDFNode valueToNode(Object value) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(value, "Missing required value");
@@ -662,17 +645,17 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 		} else if (value instanceof IndividualUriValue) {
 			return model.createResource(((IndividualUriValue)value).getIndividualURI());
 		} else {
-			logger.error("Value type "+value.getClass().getName()+" not supported.");
+            logger.error("Value type {} not supported.", value.getClass().getName());
 			throw new SpdxInvalidTypeException("Value type "+value.getClass().getName()+" not supported.");
 		}
 	}
 
 	/**
 	 * Get the value associated with the property associated with the ID
-	 * @param id
-	 * @param propertyName
+	 * @param id SPDX ID
+	 * @param propertyName property name
 	 * @return Optional value
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public Optional<Object> getPropertyValue(String id, String propertyName) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -699,7 +682,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 			}
 			Optional<Object> result = valueNodeToObject(iter.next(), property);
 			if (iter.hasNext()) {
-				logger.error("Error getting single value.  Multiple values for property "+propertyName+" ID "+id+".");
+                logger.error("Error getting single value.  Multiple values for property {} ID {}.", propertyName, id);
 				throw new SpdxRdfException("Error getting single value.  Multiple values for property "+propertyName+" ID "+id+".");
 			}
 			return result;
@@ -730,8 +713,8 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	 * Convert a node in the RDF graph to a Java object
 	 * @param propertyValue node containing the value
 	 * @param property property which references the value
-	 * @return
-	 * @throws InvalidSPDXAnalysisException
+	 * @return a Java object based on the propertyValue
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	private Optional<Object> valueNodeToObject(RDFNode propertyValue, Property property) throws InvalidSPDXAnalysisException {
 		if (Objects.isNull(propertyValue)) {
@@ -771,14 +754,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 							SpdxConstantsCompatV2.CLASS_SPDX_LISTED_LICENSE, specVersion));
 				} else {
 					// Assume this is an individual value
-					IndividualUriValue iv = new IndividualUriValue() {
-
-						@Override
-						public String getIndividualURI() {
-							return propertyUri;
-						}
-						
-					};
+					IndividualUriValue iv = () -> propertyUri;
 					return Optional.of(iv);
 				}
 			} else {
@@ -793,24 +769,24 @@ public class RdfSpdxModelManager implements IModelStoreLock {
      * @param literalValue node value for the literal
      * @param property property associated with the literal value
      * @return the object associated with the literal value
-     * @throws InvalidSPDXAnalysisException
+     * @throws InvalidSPDXAnalysisException On SPDX parsing errors
      */
     private Optional<Object> literalNodeToObject(Object literalValue, Property property) throws InvalidSPDXAnalysisException {
         if (literalValue instanceof String) {
             // need to check type and convert to boolean or integer
-            Optional<Class<? extends Object>> propertyClass = SpdxOwlOntology.getSpdxOwlOntology().getPropertyClass(property);
+            Optional<Class<?>> propertyClass = SpdxOwlOntology.getSpdxOwlOntology().getPropertyClass(property);
             if (propertyClass.isPresent()) {
                 if (Integer.class.equals(propertyClass.get())) {
                     try {
                         return Optional.of(Integer.parseInt((String)literalValue));
                     } catch(NumberFormatException ex) {
-                        throw new InvalidSPDXAnalysisException("Invalid integer format for property "+property.toString(), ex);
+                        throw new InvalidSPDXAnalysisException("Invalid integer format for property "+ property, ex);
                     }
                 } else if (Boolean.class.equals(propertyClass.get())) {
                     try {
                         return Optional.of(Boolean.valueOf((String)literalValue));
                     } catch(Exception ex) {
-                        throw new InvalidSPDXAnalysisException("Invalid boolean format for property "+property.toString(), ex);
+                        throw new InvalidSPDXAnalysisException("Invalid boolean format for property "+ property, ex);
                     }
                 } else {
                     return Optional.of(literalValue);
@@ -825,50 +801,50 @@ public class RdfSpdxModelManager implements IModelStoreLock {
     
     /**
 	 * Obtain an ObjectUri from a resource
-	 * @param resource
+	 * @param resource rRDF resource
 	 * @return ID formatted appropriately for use outside the RdfStore
-	 * @throws SpdxRdfException
+	 * @throws SpdxRdfException On SPDX parsing errors
 	 */
 	private String resourceToObjectUri(Resource resource) throws SpdxRdfException {
-		Objects.requireNonNull(resource, "Mising required resource");
+		Objects.requireNonNull(resource, "Missing required resource");
 		if (resource.isAnon()) {
 			return RdfStore.ANON_PREFIX + resource.getId();
 		} else if (resource.isURIResource()) {
 			return resource.getURI();
 		} else {
-			logger.error("Attempting to convert unsupported resource type to an ID: "+resource.toString());
+            logger.error("Attempting to convert unsupported resource type to an ID: {}", resource);
 			throw new SpdxRdfException("Only anonymous and URI resources can be converted to an ID");
 		}
 	}
 
 	/**
 	 * Get the next ID for the give ID type
-	 * @param idType
-	 * @return
-	 * @throws InvalidSPDXAnalysisException
+	 * @param idType type of ID
+	 * @return next ID available
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public String getNextId(IdType idType) throws InvalidSPDXAnalysisException {
 		switch (idType) {
-		case Anonymous: return RdfStore.ANON_PREFIX+String.valueOf(model.createResource().getId());
-		case LicenseRef: return SpdxConstantsCompatV2.NON_STD_LICENSE_ID_PRENUM+RdfStore.GENERATED+String.valueOf(getNextLicenseId());
-		case DocumentRef: return SpdxConstantsCompatV2.EXTERNAL_DOC_REF_PRENUM+RdfStore.GENERATED+String.valueOf(getNextDocumentId());
-		case SpdxId: return SpdxConstantsCompatV2.SPDX_ELEMENT_REF_PRENUM+RdfStore.GENERATED+String.valueOf(getNextSpdxId());
+		case Anonymous: return RdfStore.ANON_PREFIX+ model.createResource().getId();
+		case LicenseRef: return SpdxConstantsCompatV2.NON_STD_LICENSE_ID_PRENUM+RdfStore.GENERATED+ getNextLicenseId();
+		case DocumentRef: return SpdxConstantsCompatV2.EXTERNAL_DOC_REF_PRENUM+RdfStore.GENERATED+ getNextDocumentId();
+		case SpdxId: return SpdxConstantsCompatV2.SPDX_ELEMENT_REF_PRENUM+RdfStore.GENERATED+ getNextSpdxId();
 		case ListedLicense: {
 			logger.error("Can not generate a license ID for a Listed License");
 			throw new InvalidSPDXAnalysisException("Can not generate a license ID for a Listed License");
 		}
 		default: {
-			logger.error("Unknown ID type for next ID: "+idType.toString());
-			throw new InvalidSPDXAnalysisException("Unknown ID type for next ID: "+idType.toString());
+            logger.error("Unknown ID type for next ID: {}", idType);
+			throw new InvalidSPDXAnalysisException("Unknown ID type for next ID: "+ idType);
 		}
 		}
 	}
 
 	/**
 	 * Remove a property associated with a given ID and all values associated with that property
-	 * @param id
-	 * @param propertyName
-	 * @throws InvalidSPDXAnalysisException
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public void removeProperty(String id, String propertyName) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing require ID");
@@ -914,28 +890,31 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 			RDFNode subject = qs.get("s");
 			RDFNode type = qs.get("type");
 			try {
-				
-				return new TypedValue(resourceToObjectUri(subject.asResource()), 
-						SpdxResourceFactory.resourceToSpdxType(type.asResource()).get(), specVersion);
+				Optional<String> spdxType = SpdxResourceFactory.resourceToSpdxType(type.asResource());
+				if (spdxType.isEmpty()) {
+					throw new RuntimeException(new InvalidSPDXAnalysisException("Missing type for resource"));
+				}
+				return new TypedValue(resourceToObjectUri(subject.asResource()),
+						spdxType.get(), specVersion);
 			} catch (Exception e) {
 				logger.error("Unexpected exception converting to type");
 				throw new RuntimeException(e);
 			}
-		}).onClose(() -> {qe.close();});
+		}).onClose(qe::close);
 	}
 
 	/**
 	 * Remove a specific value from a collection associated with an ID and property
-	 * @param id
-	 * @param propertyName
-	 * @param value
-	 * @return
-	 * @throws InvalidSPDXAnalysisException
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @param value value to set
+	 * @return true if the value was present
+	 * @throws InvalidSPDXAnalysisException  On SPDX parsing errors
 	 */
 	public boolean removeValueFromCollection(String id, String propertyName, Object value) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
 		Objects.requireNonNull(propertyName, "Missing required property name");
-		Objects.requireNonNull(value, "Mising required value");
+		Objects.requireNonNull(value, "Missing required value");
 		model.enterCriticalSection(false);
 		try {
 			Resource idResource = idToResource(id);
@@ -953,10 +932,10 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param id
-	 * @param propertyName
+	 * @param id SPDX ID
+	 * @param propertyName property name
 	 * @return the total number of objects associated with the ID and property
-	 * @throws InvalidSPDXAnalysisException 
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public int collectionSize(String id, String propertyName) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -976,7 +955,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	 * @param propertyName Name of the property with the collection
 	 * @param value value to check
 	 * @return true if the value exists in the model as the object of a property associated with the ID
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public boolean collectionContains(String id, String propertyName, Object value) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -994,10 +973,10 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * Clear (remove) all values assocociated with the ID and property
-	 * @param id
-	 * @param propertyName
-	 * @throws InvalidSPDXAnalysisException
+	 * Clear (remove) all values associated with the ID and property
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public void clearValueCollection(String id, String propertyName) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1013,12 +992,12 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * Add value to the list of objects where the subject is the id and the predicate is the propertyName
-	 * @param id
-	 * @param propertyName
-	 * @param value
+	 * Add value to the list of objects where the subject is the id and the predicate are the propertyName
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @param value value to add
 	 * @return true if the collection was modified
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public boolean addValueToCollection(String id, String propertyName, Object value) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1041,10 +1020,10 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param id
-	 * @param propertyName
+	 * @param id SPDX ID
+	 * @param propertyName property name
 	 * @return the list of values associated with id propertyName
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public Iterator<Object> getValueList(String id, String propertyName) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1055,11 +1034,11 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 	
 	/**
-	 * @param id
-	 * @param propertyName
-	 * @param clazz
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @param clazz class to check for assignability
 	 * @return true if the OWL Ontology restrictions specifies that the class for the ID and property name allows it to be assigned to clazz
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	private boolean isAssignableTo(String id, String propertyName, Class<?> clazz) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1105,7 +1084,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param dataUri
+	 * @param dataUri URI for a data type
 	 * @return the class associated with the data URI
 	 */
 	private Class<?> dataUriToClass(String dataUri) throws SpdxRdfException {
@@ -1119,11 +1098,11 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param id
-	 * @param propertyName
-	 * @param clazz
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @param clazz class to check for assignability
 	 * @return true if all collection members associated with the property of id is assignable to clazz
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public boolean isCollectionMembersAssignableTo(String id, String propertyName, Class<?> clazz) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1132,7 +1111,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 		try {
 			return isAssignableTo(id, propertyName, clazz);
 		} catch (MissingDataTypeAndClassRestriction ex) {
-			logger.warn("Error determining assingability by OWL ontology.  Checking actual properties.",ex);
+			logger.warn("Error determining assignability by OWL ontology.  Checking actual properties.",ex);
 		}
 		// NOTE: we only get here if there is an error taking the ontology approach
 		model.enterCriticalSection(false);
@@ -1176,11 +1155,11 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param id
-	 * @param propertyName
-	 * @param clazz
+	 * @param id SPDX ID
+	 * @param propertyName property name
+	 * @param clazz class to check for assignability
 	 * @return true if there is a property value assignable to clazz
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public boolean isPropertyValueAssignableTo(String id, String propertyName, Class<?> clazz) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1188,7 +1167,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 		try {
 			return isAssignableTo(id, propertyName, clazz);
 		} catch (MissingDataTypeAndClassRestriction ex) {
-			logger.warn("Error determining assingability by OWL ontology.  Checking actual properties.",ex);
+			logger.warn("Error determining assignability by OWL ontology.  Checking actual properties.",ex);
 		}
 		// NOTE: we only get here if the OWL schema approach didn't work
 		model.enterCriticalSection(false);
@@ -1201,7 +1180,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 			}
 			Optional<Object> objectValue = valueNodeToObject(iter.next(), property);
 			if (iter.hasNext()) {
-				logger.error("Error getting single value.  Multiple values for property "+propertyName+" ID "+id+".");
+                logger.error("Error getting single value.  Multiple values for property {} ID {}.", propertyName, id);
 				throw new SpdxRdfException("Error getting single value.  Multiple values for property "+propertyName+" ID "+id+".");
 			}
 			if (objectValue.isPresent()) {
@@ -1239,10 +1218,10 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * @param id
-	 * @param propertyName
+	 * @param id SPDX ID
+	 * @param propertyName property name
 	 * @return true if the property of associated with id contains more than one object
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public boolean isCollectionProperty(String id, String propertyName) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
@@ -1271,7 +1250,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 		            return model.createResource(SpdxConstantsCompatV2.SPDX_NAMESPACE + SpdxConstantsCompatV2.CLASS_SPDX_LISTED_LICENSE_EXCEPTION);
 		        }
 		    }
-			logger.error("ID "+idResource+" does not have a type.");
+            logger.error("ID {} does not have a type.", idResource);
 			throw new SpdxInvalidIdException("ID "+idResource+" does not have a type.");
 		} else {
 		    return statement.getObject().asResource();
@@ -1297,8 +1276,8 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	}
 
 	/**
-	 * Translate a case insensitive ID into a case sensitive ID
-	 * @param caseInsensisitiveId
+	 * Translate a case-insensitive ID into a case-sensitive ID
+	 * @param caseInsensisitiveId ID with case ignored
 	 * @return case sensitive ID
 	 */
 	public Optional<String> getCasesensitiveId(String caseInsensisitiveId) {
@@ -1307,8 +1286,8 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 
 	/**
 	 * Delete the entire resource and all statements
-	 * @param id
-	 * @throws SpdxInvalidIdException 
+	 * @param id SPDX ID
+	 * @throws SpdxInvalidIdException On SPDX parsing errors
 	 */
 	public void delete(String id) throws SpdxInvalidIdException {
 		Resource idResource = idToResource(id);
@@ -1318,7 +1297,7 @@ public class RdfSpdxModelManager implements IModelStoreLock {
 	/**
 	 * @param id associated with a type
 	 * @return Type typed value for the ID if it exists and is of an SPDX type, otherwise empty
-	 * @throws InvalidSPDXAnalysisException
+	 * @throws InvalidSPDXAnalysisException On SPDX parsing errors
 	 */
 	public Optional<TypedValue> getTypedValue(String id) throws InvalidSPDXAnalysisException {
 		Objects.requireNonNull(id, "Missing required ID");
